--- a/frontEndSrc/src/app/modules/call-tree-entry-maintenance/call-tree-editor/call-tree-editor.component.html
+++ b/frontEndSrc/src/app/modules/call-tree-entry-maintenance/call-tree-editor/call-tree-editor.component.html
@@ -10,21 +10,16 @@
       <td [innerHtml]="callTreeEntry.systemName|safeHtml"></td>
     </tr>
   </table>
-  Call Tree Detail:
-  <ckeditor
-    required
+  <app-rich-text-editor  
     name="callTreeDetail"
-    [config]="ckeditorConfig"
-    #callTreeDetail1="ngModel"
+    [form]="callTreeEditForm"
     [(ngModel)]="this.callTree.callTreeDetail">
-  </ckeditor>
-  <mat-error *ngIf="(callTreeDetail1.touched || callTreeEditForm.submitted)  && callTreeDetail1.hasError('required')">
-    Call tree is <strong>required</strong>
-  </mat-error>
+  </app-rich-text-editor>
 
   <mat-dialog-actions>
     <button mat-raised-button type="submit" color="primary" class="Update-btn">Save</button>
     <button mat-raised-button type="button" class="Discard-btn" (click)="closeDialog()">Close</button>
   </mat-dialog-actions>
 </form>
-
+Dirty:{{callTreeEditForm.dirty}}<br>
+Valid:{{callTreeEditForm.valid}}
