--- a/frontEndSrc/src/app/modules/call-tree-entry-maintenance/call-tree-entry-editor/call-tree-entry-editor.component.html
+++ b/frontEndSrc/src/app/modules/call-tree-entry-maintenance/call-tree-entry-editor/call-tree-entry-editor.component.html
@@ -193,72 +193,8 @@
       <app-manual-list  
         name="manuals" 
         [message]="this.manualMessage"
-        [(ngModel)]="this.callTreeEntry.manuals">
+        [manuals]="this.callTreeEntry.manuals">
       </app-manual-list>
-<!--      
-      <table style="width:100%;">
-        <tr>
-          <td>Operation Manual(Optional):</td>
-          <td>
-            <button style="float:right" mat-raised-button type="button" color="primary" class="Update-btn" (click)="addManual()">
-              Add Operation Manual
-            </button>
-          </td>
-        </tr>
-        <tr *ngFor="let manual of this.callTreeEntry.manuals; let i = index">
-          <td colspan=2>
-            <mat-form-field>
-              <mat-label>Manual Location</mat-label>
-              <input
-                matInput
-                required
-                type="text"
-                [(ngModel)]="manual.manualLocation"
-                name="manualLocation{{i}}"
-                #manualLocationValidator="ngModel">
-              <mat-error *ngIf="manualLocationValidator.hasError('required')">
-                Manual location is <strong>required</strong>
-              </mat-error>
-            </mat-form-field>
-            <mat-form-field>
-              <mat-label>Manual Description</mat-label>
-              <input
-                matInput
-                required
-                type="text"
-                [(ngModel)]="manual.description"
-                name="manualDesc{{i}}"
-                #manualDescValidator="ngModel">
-              <mat-error *ngIf="manualDescValidator.hasError('required')">
-                Manual Description is <strong>required</strong>
-              </mat-error>
-            </mat-form-field>
-            <mat-form-field>
-              <mat-label>Last Update Date</mat-label>
-              <input
-                matInput
-                required
-                type="text"
-                [(ngModel)]="manual.lastUpdateDate"
-                name="manualLastUpdateDate{{i}}"
-                #manualLastUpdateDateValidator="ngModel">
-              <mat-error *ngIf="manualLastUpdateDateValidator.hasError('required')">
-                Last Update Date is <strong>required</strong>
-              </mat-error>
-            </mat-form-field>
-            &nbsp;&nbsp;&nbsp;&nbsp;
-            <button
-              style="font-weight: bold;;font-size: 30px;vertical-align: middle;"
-              mat-raised-button type="button"
-              color="primary"
-              class="Update-btn"
-              (click)="removeManual(i)">
-                -
-            </button>
-          </td>
-        </tr>
-      </table>
--->      
     </div>
   </div>
   
@@ -267,6 +203,9 @@
     <button mat-raised-button type="button" class="Discard-btn" (click)="closeDialog()">Close</button>
   </mat-dialog-actions>
 </form>
-<!--
-{{this.callTreeEntry|json}}
--->
+
+{{this.callTreeEntry|json}}<br>
+Dirty:{{callTreeEntryEditForm.dirty}}<br>
+Valid:{{callTreeEntryEditForm.valid}}<br>
+
+Errors:{{callTreeEntryEditForm.errors|json}}
