--- a/frontEndSrc/src/app/modules/call-tree-entry-maintenance/call-tree-entry-editor/call-tree-entry-editor.component.html
+++ b/frontEndSrc/src/app/modules/call-tree-entry-maintenance/call-tree-entry-editor/call-tree-entry-editor.component.html
@@ -1,73 +1,16 @@
 <h2 mat-dialog-title>{{ action }} A Call Tree Entry</h2>
 <form #callTreeEntryEditForm="ngForm" (ngSubmit)="onSubmit(callTreeEntryEditForm)" novalidate>
   <div mat-dialog-content>
-    <app-call-tree-entry
-      name="callTreeEntry"
-      [callTreeEntry]="this.callTreeEntry">
-    </app-call-tree-entry>
-	  <div *ngIf="(this.callTreeEntry.callTreeEntryId==-1)">
-      <hr>
-      Call Tree:
-      <mat-radio-group
-        name="callTreeType"
-        (ngModelChange)=onCallTreeTypeChange($event)
-        [(ngModel)]="callTreeType">
-        <div style="display:flex;flex-direction: column;padding-top: 5px;">
-          <div style="display:flex;flex-direction: column;">
-            <mat-radio-button style="padding-bottom: 5px;" [value]="1">Create an individual CallTree</mat-radio-button>
-            <div tyle="display:flex;" *ngIf="(callTreeType==1)">
-              <app-call-tree [callTree]="this.callTreeEntry.callTree"></app-call-tree>
-            </div>
-          </div>
-          <div style="display:flex;flex-direction: column;padding-top: 5px;">
-            <mat-radio-button [value]="2">Share CallTree with the following system:</mat-radio-button>
-            <div tyle="display:flex;" *ngIf="(callTreeType==2)">
-              <mat-form-field>
-                <mat-label>Division</mat-label>
-                <mat-select
-                  required
-                  name="sharedDivision"
-                  [(ngModel)]="sharedDivision"
-                  (ngModelChange)=onSharedDivisionChange($event)
-                  #sharedDivisionValidator="ngModel">
-                  <mat-option *ngFor="let division of this.sharedDivisionList" [value]="division">
-                    {{division}}
-                  </mat-option>
-                </mat-select>
-                <mat-error *ngIf="sharedDivisionValidator.hasError('required')">
-                  Division is <strong>required</strong>
-                </mat-error>
-              </mat-form-field>
-              <mat-form-field>
-                <mat-label>System</mat-label>
-                <mat-select
-                  required
-                  name="sharedCallTreeId"
-                  (selectionChange)="updateCallTreeDetail($event)"
-                  [(ngModel)]="this.callTreeEntry.callTree.callTreeId"
-                  #sharedSystemValidator="ngModel">
-                  <mat-option
-                    *ngFor="let sharedSystemName of this.sharedSystemNameList" [value]="this.systemToCalltree[sharedSystemName].callTreeId">
-                    {{sharedSystemName}}
-                  </mat-option>
-                </mat-select>
-                <mat-error *ngIf="sharedSystemValidator.hasError('required')">
-                  System is <strong>required</strong>
-                </mat-error>
-              </mat-form-field><br>
-              Call Tree Detail:
-              <div [innerHTML]="this.sharedCallTreeDetail|safeHtml"></div>
-            </div>
-          </div>
-        </div>
-      </mat-radio-group>
-      <hr>
-      <app-manual-list
-        name="manuals"
-        [message]="this.manualMessage"
-        [manuals]="this.callTreeEntry.manuals">
-      </app-manual-list>
-    </div>
+    <mat-tab-group>
+      <mat-tab label="One">
+        <h1>Some tab content</h1>
+        <p>...</p>
+      </mat-tab>
+      <mat-tab label="Two">
+        <h1>Some more tab content</h1>
+        <p>...</p>
+      </mat-tab>
+    </mat-tab-group>
   </div>
   <mat-dialog-actions>
     <button mat-raised-button type="submit" color="primary" class="Update-btn">Save</button>
