--- a/frontEndSrc/src/app/modules/call-tree-entry-maintenance/call-tree-entry-maintenance.component.html
+++ b/frontEndSrc/src/app/modules/call-tree-entry-maintenance/call-tree-entry-maintenance.component.html
@@ -10,10 +10,10 @@
       </mat-form-field>
     </td>
     <td>
-      <button 
-        style="float:right" 
-        mat-raised-button 
-        color="primary" 
+      <button
+        style="float:right"
+        mat-raised-button
+        color="primary"
         (click)="popupDialog('Add',callTreeEntryTemplate)">
           Add New Call Tree Entry
       </button>
@@ -21,12 +21,12 @@
   </tr>
   <tr>
     <td colspan="2">
-      <table 
-        mat-table 
-        [dataSource]="callTreeEntryDataSource" 
-        matSort 
-        matSortActive="systemName" 
-        matSortDirection="asc" 
+      <table
+        mat-table
+        [dataSource]="callTreeEntryDataSource"
+        matSort
+        matSortActive="systemName"
+        matSortDirection="asc"
         class="mat-elevation-z8">
         <ng-container matColumnDef="division">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Division</th>
@@ -38,11 +38,11 @@
         </ng-container>
         <ng-container matColumnDef="location">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Location</th>
-            <td mat-cell *matCellDef="let element" [innerHTML]="element.location| safeHtml"></td>
+            <td mat-cell centerOnly *matCellDef="let element" [innerHTML]="element.location| safeHtml"></td>
         </ng-container>
         <ng-container matColumnDef="serviceLevel">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Service<br>Level<a href="#serviceLevel">*</a></th>
-            <td mat-cell *matCellDef="let element">{{element.serviceLevel}}</td>
+            <td mat-cell centerOnly *matCellDef="let element">{{element.serviceLevel}}</td>
         </ng-container>
         <ng-container matColumnDef="missionCritical">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Mission Critical</th>
@@ -50,17 +50,15 @@
       </ng-container>
       <ng-container matColumnDef="timeToStartProcedure">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Time Interval to start established<br>procedures<a href="#timeLimit">#</a></th>
-            <td mat-cell *matCellDef="let element">{{element.timeToStartProcedure}}</td>
+            <td mat-cell centerOnly *matCellDef="let element">{{element.timeToStartProcedure}}</td>
         </ng-container>
         <ng-container matColumnDef="contact">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Call tree</th>
-          <td mat-cell *matCellDef="let element">
-            <a href="javascript:void(0)" (click)="popupDialog('EditCallTree',element)">Edit CallTree</a>
-          </td>
+          <td mat-cell *matCellDef="let element" [innerHTML]="element.callTree.callTreeDetail"></td>
         </ng-container>
         <ng-container matColumnDef="timeToEscalate">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Time Interval to <br>escalate<br>if no reply</th>
-            <td mat-cell *matCellDef="let element"> {{element.timeToEscalate}} </td>
+            <td mat-cell centerOnly *matCellDef="let element"> {{element.timeToEscalate}} </td>
         </ng-container>
         <ng-container matColumnDef="logRecipients">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Appreciation<br>Log Recipients</th>
@@ -69,7 +67,10 @@
         <ng-container matColumnDef="manual">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Operation Manual</th>
           <td mat-cell *matCellDef="let element">
-            <a href="javascript:void(0)" (click)="popupDialog('EditManual',element)">Edit Manual Info</a>
+            <div *ngFor="let manual of element.manuals">
+              <a href="{{manual.manualLocation}}">{{manual.description}}</a><br>
+              {{manual.lastUpdateDate}}
+            </div>
           </td>
         </ng-container>
         <ng-container matColumnDef="status">
