--- a/frontEndSrc/src/app/modules/call-tree-entries-list/call-tree-entry-maintenance/call-tree-entry-maintenance.component.html
+++ b/frontEndSrc/src/app/modules/call-tree-entries-list/call-tree-entry-maintenance/call-tree-entry-maintenance.component.html
@@ -3,21 +3,15 @@
   <div mat-dialog-content>
     <mat-tab-group>
       <mat-tab label="Entry Attributes">
-        <!--
         <app-call-tree-entry-editor
           [callTreeEntry]="callTreeEntry">
         </app-call-tree-entry-editor>
-        -->
       </mat-tab>
       <mat-tab label="Call Tree">
-      <!--
         <app-call-tree-editor></app-call-tree-editor>
-      -->
       </mat-tab>
       <mat-tab label="Operation Manual(Optional)">
-      <!--
         <app-manual-editor></app-manual-editor>
-      -->
       </mat-tab>
     </mat-tab-group>
   </div>
@@ -26,3 +20,5 @@
     <button mat-raised-button type="button" class="Discard-btn" (click)="closeDialog()">Close</button>
   </mat-dialog-actions>
 </form>
+<br>
+form.valid={{callTreeEntryEditForm.valid}}<br>
