--- a/frontEndSrc/src/app/modules/call-tree-entries-list/manual-editor/manual-editor.component.html
+++ b/frontEndSrc/src/app/modules/call-tree-entries-list/manual-editor/manual-editor.component.html
@@ -1,3 +1,4 @@
+<br>
 <div [formGroup]="manualsForm">
   <div class="container">
     <div class="headerRow">
@@ -14,21 +15,58 @@
               Add Operation Manual
             </button>
       </div>
-      <div
-        class="manualRow"
-        formArrayName="manualItemList"
-        *ngFor="let item of manualItemList.controls; let i = index;">
-        <div [formGroupName]="i">
-          <div>
-            <mat-form-field>
+    </div>
+    <div formArrayName="manualItemList" class="manualRow">
+      <div *ngFor="let item of manualItemList.controls; let i = index;" [formGroupName]="i" class="manualRow">
+        <input type=hidden formControlName="manualId">
+        <div>
+          <mat-form-field>
             <mat-label>Manual Location</mat-label>
-                <input
-                  matInput
-                  required
-                  type="text"
-                  formControName="manualLocation">
-            </mat-form-field>
-          </div>
+            <input
+              matInput
+              required
+              type="text"
+              formControlName="manualLocation">
+            <mat-error *ngIf="manualItemList.controls[i].get('manualLocation').hasError('required')">
+              Manual location is <strong>required</strong>
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field>
+            <mat-label>Manual Description</mat-label>
+            <input
+              matInput
+              type=text
+              required
+              formControlName="description">
+            <mat-error *ngIf="manualItemList.controls[i].get('description').hasError('required')">
+              Manual Description is <strong>required</strong>
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-form-field style="width:100%">
+              <mat-label>Last Update Date</mat-label>
+              <input
+                matInput
+                required
+                type="text"
+                formControlName="lastUpdateDate">
+              <mat-error *ngIf="manualItemList.controls[i].get('lastUpdateDate').hasError('required')">
+                Last Update Date is <strong>required</strong>
+              </mat-error>
+          </mat-form-field>
+        </div>
+        <div class="removeButton">
+           <button
+              style="font-weight: bold;font-size: 30px;vertical-align: middle;"
+              mat-raised-button type="button"
+              color="primary"
+              class="Update-btn"
+              (click)="removeManual(i)">
+                -
+            </button>
         </div>
       </div>
     </div>
