Manual Editor UI ok

--- a/frontEndSrc/src/app/modules/call-tree-entries-list/manual-editor/manual-editor.component.html
+++ b/frontEndSrc/src/app/modules/call-tree-entries-list/manual-editor/manual-editor.component.html
@@ -16,7 +16,7 @@
             </button>
       </div>
     </div>
-    <div formArrayName="manualItemList" class="manualRow">
+    <div formArrayName="manualItemList">
       <div *ngFor="let item of manualItemList.controls; let i = index;" [formGroupName]="i" class="manualRow">
         <input type=hidden formControlName="manualId">
         <div>
