--- a/admin/src/app/home/home.component.html
+++ b/admin/src/app/home/home.component.html
@@ -1,3 +1,29 @@
-<p>home works!</p>
+<mat-toolbar class="header">
+  <span>Call tree Admin. Page</span>
+</mat-toolbar>
+<mat-sidenav-container class="container">
+  <mat-sidenav #sidenav mode="side" opened class="sidenav">
+    <mat-nav-list>
+      <a mat-list-item routerLink='' (click)="toggleCallTreeEntryFunction()">Call Tree Entry Management</a>
+      <mat-list *ngIf="(showCallTreeEntryFunction)" style="margin-left:30px;">
+            <mat-list-item>Add A Call Tree Entry</mat-list-item>
+            <mat-list-item>Edit A Call Tree Entry</mat-list-item>
+      </mat-list>
+      <a mat-list-item routerLink='' (click)="toggleCallTreeFunction()">Call Tree Management</a>
+      <mat-list *ngIf="(showCallTreeFunction)" style="margin-left:30px;">
+        <mat-list-item>Add A Call Tree</mat-list-item>
+        <mat-list-item>Edit A Call Tree</mat-list-item>
+      </mat-list>
 
-<a [routerLink]="" (click)="logout()">Logout</a>
+      <a mat-list-item routerLink='' (click)="toggleManualFunction()">Operation Manual Management</a>
+      <mat-list *ngIf="(showManualFunction)" style="margin-left:30px;">
+        <mat-list-item>Add An Operation Manual</mat-list-item>
+        <mat-list-item>Edit An Operation Manual</mat-list-item>
+      </mat-list>
+      <a mat-list-item routerLink="" (click)="logout()">Logout</a>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content class="content">
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
